Fri Mar 30 11:12:53 2001  Carlos O'Ryan  <coryan@uci.edu>

        * ace/*/Makefile:
        * apps/*/Makefile:
        * docs/*/Makefile:
        * examples/*/Makefile:
        * netsvcs/*/Makefile:
        * performance-tests/*/Makefile:
        * tests/*/Makefile:
        * websvcs/*/Makefile:
        * ASNMP/*/Makefile:
          Regenerate dependencies.

Fri Mar 30 08:15:26 2001  Carlos O'Ryan  <coryan@uci.edu>

        * ace/QoS/QoS_Session.h:
          Add #include for ACE_QoS_Export

Fri Mar 30 07:31:54 2001  Carlos O'Ryan  <coryan@uci.edu>

        * ace/QoS/QoS_Session.h:
          Fixed export macro

Thu Mar 29 20:14:00 2001  Craig Rodrigues <crodrigu@bbn.com>

        * ace/SOCK.h:
           Remove include of QoS_Session.h, since it is not used here.

Thu Mar 29 19:48:00 2001  Craig Rodrigues <crodrigu@bbn.com>

        * ace/QoS_Session.h:
        * ace/QoS/QoS_Manager.h:
        * ace/QoS/QoS_Session_Impl.h:
        * ace/QoS/QoS_Session_Factory.h:
        * examples/QOS/QoS_Signal_Handler.h:
        * examples/QOS/Receiver_QoS_Event_Handler.h:
        * examples/QOS/client.cpp:
        * examples/QOS/QoS_Util.h:
        * examples/QOS/Sender_QoS_Event_Handler.h:
        * examples/QOS/server.cpp:
        * examples/QOS/Makefile:

        Move QoS_Session.h to the ace/QoS directory.

Thu Mar 29 19:12:38 2001  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/rules.lib.GNU: AIX-specific changes to
          build shared libraries by making a shared shr.o file and putting
          that into an archive. Seems weird, but that's the way AIX does
          things. This makes ACE consistent with other AIX software.

        * include/makeinclude/platform_aix4_cset++.GNU: Made some changes
          to attempt to work with the new scheme for shared lib creation on
          AIX. Did not test it, and don't plan to. The CSet++ compiler is not
          supported by IBM any longer, and Riverace is not supporting ACE