@@ -87,6 +87,11 @@
 	  TAO's RT Event Service implementation.
 	</P>
       </LI>
+      <LI><P><A HREF="tao/av/index.html">TAO_AV:
+	  </A>
+	  TAO's Audio/Video Streaming Service implementation.
+	</P>
+      </LI>
     </UL>
 
   </body>
